Remove JDK 8 profile (#189)
Jakarta Servlet requires JDK 11
Jakarta JSP API uses JDK 17 already.

We are now:
- removing old jdk-8 related profile (no longer possible)
- keeping JDK required version at 17

---------

Co-authored-by: Patryk Dadas <patryk.dadas@hazelcast.com>